--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -1,4 +1,5 @@
 @use './mixin.scss' as *;
+@use './main.scss' as *;
 @import url('https://fonts.googleapis.com/css2?family=Courgette&family=Righteous&display=swap');
 
 
