--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,3 +1,28 @@
 .header__title{
     font-weight: 700;
 }
+
+html {
+    scroll-behavior: smooth;
+  }
+/* Works on Firefox */
+
+  
+  /* Works on Chrome, Edge, and Safari */
+  ::-webkit-scrollbar {
+    width: 8px;
+    padding: 22px;
+    
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: black;
+    
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: white;
+    border-radius: 20px;
+    height: 10px;
+    border-color: white;
+  }
