--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,3 +1,4 @@
+@use './mixin.scss' as *;
 .header__title{
     font-weight: 700;
 }
@@ -28,8 +29,15 @@ html {
   }
 
   .swiper {
-    width: 240px;
-    height: 320px;
+    width: 220px;
+    height: 280px;
+  }
+
+  @include media(md){
+    .swiper {
+      width: 220px;
+      height: 280px;
+    }
   }
   
   .swiper-slide {
