--- a/src/styles/_mixin.scss
+++ b/src/styles/_mixin.scss
@@ -1,26 +1,31 @@
 /*MEDIA QUERIES*/
 
 @mixin media($size) {
-    @if $size ==phone-only {
-        @media (max-width: 576px) {
+    @if $size ==xs {
+        @media (min-width: 320px) {
             @content;
         }
     }
 
-    @else if $size ==tablet {
-        @media (min-width: 768px) {
+    @else if $size ==sm {
+        @media (min-width: 640px) {
             @content;
         }
     }
 
-    @else if $size ==tablet-max {
-        @media (min-width: 992px) {
+    @else if $size ==md {
+        @media (min-width:768px) {
             @content;
         }
     }
 
-    @else if $size ==desktop {
-        @media (min-width: 1200px) {
+    @else if $size ==lg {
+        @media (min-width: 1024px) {
+            @content;
+        }
+    }
+    @else if $size ==xl {
+        @media (min-width: 1284px) {
             @content;
         }
     }
