--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -8,7 +8,10 @@ html {
   }
 /* Works on Firefox */
 
-
+body{
+  position: relative;
+  height: 100%;
+}
   /* Works on Chrome, Edge, and Safari */
   ::-webkit-scrollbar {
     width: 8px;
@@ -32,25 +35,17 @@ html {
     width: 100%;
     height: 100%;
   }
-
- 
-
-  .swiper-wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
   
-  
+
   .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;    /* Center slide text vertically */
     display: flex;
-    align-items: center;
     justify-content: center;
-    border-radius: 18px;
-    font-size: 22px;
-    font-weight: bold;
-    color: #fff;
-    width: 300px !important;
+    align-items: center;
+   
   }
+  
   
  
