Remove icons header

--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -48,5 +48,12 @@ body{
    
   }
   
+  .mySwiper{
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    
+  }
   
  
