--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -45,15 +45,13 @@ body{
     justify-content: center;
     align-items: center;
     background-color: transparent;
-   
-  }
-  
-  .mySwiper{
-    display:flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
     
   }
+
+  .swiper-wrapper{
+    display:flex;
+    justify-content: center;
+  }
+  
   
  
