--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -6,11 +6,8 @@
 }
 
 .icon__burguer{
-   border: none;
-   background-color: transparent;
-   width: 100%;
+   width: 30px;
    height: 30px;
-   max-height: 30px;
 }
 
 .icon__burguer-close{
