Lenguajes , imagenes and fix responsive

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -1,3 +1,12 @@
+@use "./mixin" ;
+
 .image_resize{
-    width: 100%;
+    
+    @include media(xs){
+        width: 100%;
+    }
+    @include media(sm){
+        width:auto;
+    }
+    
 }
